# audiotec

./: .gitignore  README.md  index.html  package-lock.json  package.json  sync_notebooklm.sh  vite.config.ts
design-reference/: sonic-lab-pro.html
src/: App.tsx  index.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: gen_icons.py
src-tauri/src/: audio_engine.rs  auto_eq.rs  main.rs  osc_client.rs  room_modes.rs  session_manager.rs  simulation.rs  spatial_average.rs  wave_calc.rs
src-tauri/src/dsp/: delay_finder.rs  fft.rs  impulse_response.rs  mod.rs  rta.rs  signal_generator.rs  spectrogram.rs  spl_meter.rs  windowing.rs
src/canvas/: drawing.ts
src/components/: AcademyPanel.tsx  AiDiagnosticsPanel.tsx  AnalyzerCanvas.tsx  AutoEqPanel.tsx  ControlBar.tsx  ControlDesk.tsx  DataBar.tsx  EngineSettingsModal.tsx  GraphArea.tsx  Header.tsx  OnboardingGuide.tsx  OscPanel.tsx  RoomModesPanel.tsx  RoomVisualization.tsx  Sidebar.tsx  SpatialAvgPanel.tsx  ToolsDrawer.tsx  WaveCalcPanel.tsx
src/components/ui/: DropdownMenu.tsx  HelpTooltip.tsx  MonoDisplay.tsx  ProButton.tsx  SectionLabel.tsx
src/data/: equipment-database.json  tooltips.ts
src/hooks/: useResizableSplitter.ts  useTauriEvent.ts
src/layout/: MainLayout.tsx
src/services/: openrouter.ts
src/stores/: useAppStore.ts
